--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.3",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
@@ -31,7 +32,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "semantic-ui-react": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
