--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "main": "index.js",
+  "proxy": {
+    "/*": {
+      "target": "http://localhost:5000/"
+    }
+  },
   "scripts": {
     "server": "nodemon --watch server server/server.js",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
+    "client": "react-scripts start",
     "test": "jest"
   },
   "dependencies": {
@@ -16,9 +22,10 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "expo": "~38.0.9",
-    "expo-splash-screen": "^0.5.0",
+    "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
     "express": "^4.17.1",
